--- a/file.html
+++ b/file.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
@@ -21,6 +21,6 @@
         <div class="cell" data-cell-index="8"></div>
     </div>
     <button id="restartButton">Restart Game</button>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
